src/objects/Tops_Encryption_Mappings__c.object
<CustomObject>
    <fields>
        <fullName>Char_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Char 1</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Char_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Char 2</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Char_3__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Char 3</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBCDIC__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <label>EBCDIC</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TopsEncryptionExternalID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>TopsEncryptionExternalID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Tops Encryption Mappings</label>
    <nameField>
        <displayFormat>TEM-{000}</displayFormat>
        <label>Tops Encryption Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tops Encryption Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>